--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 						<img src='Images/LU-mark-rgb.png'></img>
 					</div>
 				</div>
-				<div id='NewSystemBtn'>Timetabling System</div>
-				<span style='position:relative; top:70px;left:410px;'>(To Be Updated)</span>
+				<div id='NewSystemBtnDiv'>
+					<a id='NewSystemLink' href='../TimetablingSystem/index.html'>
+						<div id='NewSystemBtn'>Timetabling System</div>
+					</a>
+				</div>
 				<div id='Team16'>
 					<span  style='line-height: 100px;'>TEAM 16</span>
 				</div>
@@ -33,6 +36,11 @@
 					<a href='activitylog.html'>
 						<div class='MenuBtns'> 
 							<span style='line-height: 30px;'>Activity Log</span>
+						</div>
+					</a>
+					<a href='forum.html'>
+						<div class='MenuBtns'> 
+							<span style='line-height: 30px;'>Forum</span>
 						</div>
 					</a>
 					<a href='requirements.html'> 
