--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 			</div>
 			<a id='OriginalSourceLink' >
 				<div id='OBtn' class='Btn'>
-					<span style='line-height: 40px;'>Original Image</span>
+					<span style='line-height: 40px;'>Open Image in New Tab</span>
 				</div>
 			</a>
 		</div>
@@ -29,8 +29,8 @@
 				<p>Current Progress</p>
 				<div id='MainOriginalBtnDiv'>
 					<a id='MainOriginalSourceLink' >
-						<div style='width:170px;' class='Btn'>
-							<span style='line-height: 40px;'>Original Image</span>
+						<div style='width:240px;' class='Btn'>
+							<span style='line-height: 40px;'>Open Image in New Tab</span>
 						</div>
 					</a>
 				</div>
