--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 							<span style='line-height: 30px;'>Home</span>
 						</div>
 					</a>
-					<a href='activitylog.html'>
+					<a href='workplan.html'>
 						<div class='MenuBtns'> 
-							<span style='line-height: 30px;'>Activity Log</span>
+							<span style='line-height: 30px;'>Work Plan</span>
 						</div>
 					</a>
 					<a href='forum.html'>
@@ -51,6 +51,11 @@
 					<a href='d1.html'> 
 						<div class='MenuBtns'>
 							<span style='line-height: 30px;'>Deliverable 1</span>
+						</div>
+					</a>
+					<a href='d2.html'> 
+						<div class='MenuBtns'>
+							<span style='line-height: 30px;'>Deliverable 2</span>
 						</div>
 					</a>
 					<a href='members.html'> 
