Current ER Document Added

--- a/d2.html
+++ b/d2.html
@@ -1,34 +1,23 @@
 <html>
 
-<link rel="stylesheet" type="text/css" href="CSS/d1style.css">
+<link rel="stylesheet" type="text/css" href="CSS/d2style.css">
 
 <script type='text/javascript' src='JS/jQuery.js'></script>
 <script type='text/javascript' src='jquery-ui-1.10.3/ui/jquery-ui.js'></script>
-<script type='text/javascript' src='JS/d1Script.js'></script>
+<script type='text/javascript' src='JS/d2Script.js'></script>
 
 <body>
 	<div id='D2Content'>
-		<!--
-		<h3 style='line-height: 30px;'>Prototype Website</h3>
-		<div>
-			<a href='http://co-project.lboro.ac.uk/cobjee/Team%20Projects%20Prototype/Final%20Files/'>
-				<div class='Btn'>
-					<span style='line-height: 40px;'>Prototype Website</span>
-				</div>
-			</a>
-		</div>
 		
-		<h3 style='line-height: 30px;'>Spreadsheet</h3>
+		<h3 style='line-height: 30px;'>Current Database/Entity-Relationship Structure</h3>
 		<div>
-			<a href='http://co-project.lboro.ac.uk/cobjee/Team%20Projects%20Spreadsheet/Team%2016%20Spreadsheet.xlsm'>
-				<div class='Btn'>
-					<span style='line-height: 40px;'>Download Spreadsheet</span>
-				</div>
-			</a>
+			<object class='PDFDoc' type='application/pdf' data='Deliverable2/DB ER Diagrams and Structure.pdf'></object>
 		</div>
 		
 		<h3 style='line-height: 30px;'>Reports</h3>
 		<div>
+			<span style='margin-left:30px; line-height: 30px;'>To be Updated</span>
+			<!--
 			<div id='ReportBtns'>
 				<a href='Deliverable1/UC Diagram.pdf'>
 					<div class='Btn Reports' style='margin-left:30px;'>
@@ -57,9 +46,11 @@
 				</a>
 			</div>
 			<div id='ReportContentDiv'></div>
+			-->
 		</div>
-		-->
+		
 	</div>
+	
 </body>
 
 </html>
