Fixed Timetabling System button to new link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					</div>
 				</div>
 				<div id='NewSystemBtnDiv'>
-					<a id='NewSystemLink' href='../TimetablingSystem/index.html'>
+					<a id='NewSystemLink' href='../TimetablingSystem/index.php'>
 						<div id='NewSystemBtn'>Timetabling System</div>
 					</a>
 				</div>
