Fixed d2 page and added reports A and C

--- a/d2.html
+++ b/d2.html
@@ -8,45 +8,27 @@
 
 <body>
 	<div id='D2Content'>
-		
-		<h3 style='line-height: 30px;'>Current Database/Entity-Relationship Structure</h3>
-		<div>
-			<object class='PDFDoc' type='application/pdf' data='Deliverable2/DB ER Diagrams and Structure.pdf'></object>
-		</div>
-		
+				
 		<h3 style='line-height: 30px;'>Reports</h3>
 		<div>
-			<span style='margin-left:30px; line-height: 30px;'>To be Updated</span>
-			<!--
-			<div id='ReportBtns'>
-				<a href='Deliverable1/UC Diagram.pdf'>
+			<!--<span style='margin-left:30px; line-height: 30px;'>To be Updated</span>-->
+
+				<a href='http://co-project.lboro.ac.uk/team16/PMW/Deliverable2/PHP%20Script%20Listings.zip'>
 					<div class='Btn Reports' style='margin-left:30px;'>
-						<span style='line-height: 30px;'>Use Case Diagram</span>
+						<span style='line-height: 30px;'>PHP Script Listings</span>
 					</div>
 				</a>
-				<a href='Deliverable1/UC Description.pdf'>
-					<div class='Btn Reports'>
-						<span style='line-height: 30px;'>Use Case Description</span>
-					</div>
-				</a>
-				<a href='Deliverable1/Design Principles.pdf'>
-					<div class='Btn Reports'>
-						<span style='line-height: 30px;'>Design Principles</span>
-					</div>
-				</a>
-				<a href='Deliverable1/ER Diagram.pdf'>
+				<a href='Deliverable2/DB ER Diagrams and Structure.pdf'>
 					<div class='Btn Reports'>
 						<span style='line-height: 30px;'>ER Diagram</span>
 					</div>
 				</a>
-				<a href='Deliverable1/ER Structure.pdf'>
+				<a href='Deliverable2/Report C.docx'>
 					<div class='Btn Reports'>
-						<span style='line-height: 30px;'>ER Table Structure</span>
+						<span style='line-height: 30px;'>Report C</span>
 					</div>
 				</a>
-			</div>
 			<div id='ReportContentDiv'></div>
-			-->
 		</div>
 		
 	</div>
